--- a/wechat1.0/pages/brand/brand.wxss
+++ b/wechat1.0/pages/brand/brand.wxss
@@ -1,26 +1,5 @@
 /* pages/brandCar/brandCar.wxss */
 
-.sharebtn {
-  /* animation: kf-marque-animation 3s linear infinite; */
-  background: #33adff;
-  padding: 0 30rpx 0 20rpx;
-  box-shadow: 0 4rpx 12rpx 0 rgba(50, 173, 255, 0.30);
-  border-radius: 0 200rpx 200rpx 0;
-  /* width:280rpx;  */
-  height: 60rpx;
-  position: fixed;
-  bottom: 40rpx;
-  font-size: 24rpx;
-  color: #fff;
-  left: -19%; 
-  line-height: 60rpx
-}
-
-.sharebtnicon {
-  width: 36rpx;
-  margin:0 0 5rpx 12rpx;
-}
-
 
 
 page {
@@ -36,6 +15,13 @@ page {
   width: 750rpx;
   height: 320rpx;
 }
+
+ .hiddenClass{
+  width: 100%;
+  height:100%;
+  overflow: hidden;
+  position: fixed; 
+} 
 
 
 .headerimg {
@@ -572,3 +558,4 @@ page {
 .blue {
   background: blue;
 }
+
