--- a/wechat1.0/pages/details/details.wxss
+++ b/wechat1.0/pages/details/details.wxss
@@ -2,21 +2,21 @@
  @import "../contrast/contrast.wxss"; 
 
 .sharebtn {
-  /* animation: kf-marque-animation 3s linear infinite; */
-  background: #33adff;
-  padding: 0 30rpx 0 20rpx;
-  box-shadow: 0 4rpx 12rpx 0 rgba(50, 173, 255, 0.30);
-  border-radius: 0 200rpx 200rpx 0;
-  /* width:280rpx;  */
-  height: 60rpx;
-  position: fixed;
   bottom: 126rpx;
-  font-size: 24rpx;
-  color: #fff;
-  left: -19%; 
-  line-height: 60rpx
 }
+.buttonbg{
+height:100rpx;
 
+}
+.scrollmargin{
+  margin-top: 88rpx;
+}
+.scrollHeighton{
+position: fixed;
+width: 100%;
+top: 0;
+z-index: 111;
+}
 .sharebtnicon {
   width: 36rpx;
   margin:0 0 5rpx 12rpx;
@@ -32,7 +32,7 @@
   left: 0; 
   z-index: 2000;
 }
-.reduce{
+/* .reduce{
   width: 80%;
   height: 100%;
   margin-left: 100%;
@@ -41,7 +41,7 @@
   top: 0;
   left: 0; 
   z-index: 2001;
-}
+} */
 /* .reduce-delete{
    width: 467rpx;  */
   /* width: 444rpx; */
@@ -183,12 +183,12 @@
 
 .color-blue {
   color: #33adff;
-  font-size: 42rpx;
+  font-size: 38rpx;
 }
 
 .color-gray {
   color: #999;
-  font-size: 24rpx;
+  font-size: 22rpx;
 }
 
 .cars-detail {
@@ -360,11 +360,16 @@ color:#666666;
   color: #33adff;
 }
 
+.configuration-button > wx-view:nth-child(2).forbid{
+  background: #e6e6e6;
+}
 .configuration-button >view:nth-child(2) {
   background: #33adff;
   color: #fff;
   position: relative;
 }
+
+
 
 .configuration-number {
   position: absolute;
@@ -422,4 +427,18 @@ color:#666666;
 #ss{
   color:red;
 }
-
+.drawer-box {
+  width: 80%;
+  height: 100%;
+  overflow: hidden;
+  /* position: absolute; */
+   position: fixed; 
+  right: -80%;
+  bottom: 0;
+  z-index: 2005;
+  background: #fff;
+}
+.drawer-content {
+  height: 100%;
+  overflow-y: hidden;
+}
