--- a/wechat1.0/pages/brand/brand.wxml
+++ b/wechat1.0/pages/brand/brand.wxml
@@ -1,11 +1,13 @@
- <scroll-view class="swiper-content" style="height:{{winHeight}}px" scroll-y="true" bindscroll="scroll" scroll-into-view="{{toView}}" >  
+ <!-- <view class='hh' bindtouchmove="mo"></view>  -->
+<scroll-view class="swiper-content" scroll-y="{{scrollBoolean}}"  enable-back-to-top='true' style="height:{{winHeight}}px"   bindscroll="scroll" scroll-into-view="{{toView}}"  class="{{showmask ? 'hiddenClass' :''}}">
+
   <swiper class="header-pic">
     <block>
       <swiper-item>
-        <image class='headerimg' mode='widthFix' src="http://i1.dd-img.com/assets/image/1511755505-2021422a47b28294-750w-320h.png"></image>
+        <image class='headerimg' mode='widthFix' src="http://i1.dd-img.com/assets/image/1512640810-e9dbd0d7e55e8fb7-750w-320h.png"></image>
 
 
-  <!-- <swiper autoplay="{{autoplay}}" interval="5000" duration="500" class="header-pic">
+        <!-- <swiper autoplay="{{autoplay}}" interval="5000" duration="500" class="header-pic">
     <block>
       <swiper-item>
         <image src="http://i2.dd-img.com/upload/2017/1107/1510011965417.jpg" mode='widthFix'></image>
@@ -20,31 +22,31 @@
   <!-- 条件选车S -->
   <view class='choose-box'>
     <view class='choose-title'>教你选车</view>
-    <view class='choose-view'  bindtap="getsubsidy" >
+    <view class='choose-view' bindtap="getsubsidy">
       <view class="chooseimg">
         <image src=" http://i1.dd-img.com/assets/image/1511852331-5bc707b3c055085d-100w-100h.png" mode='widthFix'></image>
       </view>
       <view class='choosetxt'>补贴排行</view>
     </view>
-    <view class='choose-view'  bindtap="getendurance">
+    <view class='choose-view' bindtap="getendurance">
       <view class="chooseimg">
         <image src="http://i1.dd-img.com/assets/image/1511852331-4958dbe6cb339d8f-100w-100h.png" mode='widthFix'></image>
       </view>
       <view class='choosetxt'>续航排行</view>
     </view>
-    <view class='choose-view'  bindtap="getnew_car">
+    <view class='choose-view' bindtap="getnew_car">
       <view class="chooseimg">
         <image src=" http://i1.dd-img.com/assets/image/1511852331-7761feb8284b8c13-100w-100h.png" mode='widthFix'></image>
       </view>
       <view class='choosetxt'>新车上市</view>
     </view>
-    <view class='choose-view'  bindtap="getcoming_soon">
+    <view class='choose-view' bindtap="getcoming_soon">
       <view class="chooseimg">
         <image src="http://i1.dd-img.com/assets/image/1511852331-bccf042db68fcb19-100w-100h.png" mode='widthFix'></image>
       </view>
       <view class='choosetxt'>即将上市</view>
     </view>
-    <view class='choose-cars'  bindtap="getchoose">
+    <view class='choose-cars' bindtap="getchoose">
       <image class='choose-cars-img' src='http://i1.dd-img.com/assets/image/1510121786-1cb3c7684d470ae8-40w-40h.png'></image>
       条件选车
     </view>
@@ -56,11 +58,11 @@
     <text class="hot-title">热门车型</text>
     <scroll-view class='hot-scroll' scroll-x="false{{}}" data-banner="{{bannerTab}}">
       <view class="banner">
-        <view class='hot-view' wx:for="{{brandData.chexi}}" wx:for-item="hotCaritem" bindtap="gotoSeries" data-pinyin="{{hotCaritem.pinyin}}" data-pserid="{{hotCaritem.cxid}}">
+        <view class='hot-view' wx:for="{{brandData}}" wx:for-item="hotCaritem" bindtap="gotoSeries" data-pinyin="{{hotCaritem.pinyin}}" data-pserid="{{hotCaritem.cxid}}">
           <view class="hotimg">
             <image src=" {{hotCaritem.focus}}" mode='widthFix'></image>
           </view>
-          <view class='hottxt'>{{hotCaritem.name}}</view>
+          <view class='hottxt'>{{hotCaritem.pp_name}}{{hotCaritem.cx_name}}</view>
         </view>
       </view>
     </scroll-view>
@@ -71,9 +73,9 @@
   <view class="brand-scroll">
     <view class="brand-item" wx:for="{{brandList}}" wx:for-index="letterIndex" wx:for-item="letterItem">
       <text id="{{letterItem.flag}}">{{letterItem.flag}}</text>
-      <view wx:for="{{letterItem.items}}" wx:for-item="carItem" bindtap="showDrawer" data-id="{{carItem.pbid}}">
+      <view wx:for="{{letterItem.items}}" wx:for-item="carItem" bindtap="showDrawer" data-id="{{carItem.ppid}}">
         <image class="img img-list" src="{{carItem.logo}}" mode="aspectFit"></image>
-        <text class="brand-name">{{carItem.pbname}}</text>
+        <text class="brand-name">{{carItem.pp_name}}</text>
       </view>
     </view>
   </view>
@@ -89,12 +91,16 @@
 
   <!--字母列表 E-->
 
-  <button  animation="{{animationShare}}" class="sharebtn" open-type="share"><text>分享给好友</text><image  class="sharebtnicon" 
 
-mode="widthFix" src='http://i1.dd-img.com/assets/image/1510898451-a672fd0868b82de9-48w-48h.png'></image></button>
+  <button animation="{{animationData}}" class="sharebtn" open-type="share">
+    <text>分享给好友</text>
+    <image class="sharebtnicon" mode="widthFix" src='http://i1.dd-img.com/assets/image/1510898451-a672fd0868b82de9-48w-48h.png'></image>
+  </button>
 
   <!--品牌列表 E-->
+
 </scroll-view>
+
 
 <!-- 城市保留值 -->
 <view class="cityIdval" data-cityval="{{cityIdData}}"></view>
@@ -102,7 +108,7 @@ mode="widthFix" src='http://i1.dd-img.com/assets/image/1510898451-a672fd0868b82d
 
 <!--抽屉 S-->
 <import src="../drawer/drawer.wxml" />
-<template is="drawer" data="{{showDrawerFlag,animationData,drawerSeriesData,num}}"></template>
+<template is="drawer" data="{{showDrawerFlag,animationDrawer,drawerSeriesData,num,scrollBoolean}}"></template>
 <!--标签切换内容E-->
 
 <!--标签切换 E-->
