--- a/wechat1.0/pages/choose_car/new_car/new_car.wxml
+++ b/wechat1.0/pages/choose_car/new_car/new_car.wxml
@@ -1,8 +1,8 @@
 <!--pages/new_car/new_car.wxml-->
 <!-- 新车上市排行 -->
-<scroll-view scroll-y="true" style="height:{{winHeight}}px"  bindscroll="scroll" lower-threshold="50" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}" bindscrolltolower="scrolltolower" > 
-<view class="container">
-  <!-- <scroll-view class="swiper-content" style="height:{{winHeight}}px" scroll-y="true" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}"> -->
+<scroll-view enable-back-to-top='true' scroll-y="true" style="height:{{winHeight}}px" bindscroll="scroll" lower-threshold="50" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}" bindscrolltolower="scrolltolower">
+  <view class="container">
+    <!-- <scroll-view class="swiper-content" style="height:{{winHeight}}px" scroll-y="true" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}"> -->
     <view class='explain'>近半年上市的车型</view>
     <view class="drawer-child" data-pinyin="{{pure.pinyin}}" bindtap="gotoSeries" wx:for="{{listData}}" wx:for-item="pure" wx:for-index="pureIndex">
 
@@ -10,40 +10,36 @@
         <image class="img img-model" src="{{pure.focus}}"></image>
         <view class="drawer-info">
           <text>{{pure.pinpai_data.name}} {{pure.name}}</text>
-          <view class='drawer-info-price'>
-
-            <!-- <block wx:if="{{pure.act_price!=''}}"> -->
-              <!-- <text class="drawer-price">￥{{pure.act_price}}</text> -->
-              指导价
-              <!-- <text class="drawer-price">83.60-141.35万</text>
-          </block>
-           <block wx:else>
-              <text class="drawer-price">暂无报价</text>
-          </block> -->
-
-              <block wx:if="{{pure.min_price!=pure.max_price}}">
-                <text class="drawer-price">￥{{pure.min_price}}-{{pure.max_price}}<text>万</text></text>
-              </block>
-              <block wx:elif="{{pure.min_price== pure.max_price}}">
-                <text class="drawer-price">￥{{pure.min_price}}<text>万</text></text>
-              </block>
-
+          <view class='drawer-info-price' wx:if="{{pure.product_status == 1}}">指导价
+            <block wx:if="{{pure.min_price!=pure.max_price}}">
+             <text class="drawer-price">￥{{pure.min_price}}-{{pure.max_price}}<text>万</text></text>
+            </block>
+            <block wx:elif="{{pure.min_price== pure.max_price}}">
+             <text class="drawer-price">￥{{pure.min_price}}<text>万</text></text>
+            </block>
           </view>
-
+          <view class='drawer-info-price' wx:if="{{pure.product_status == 2}}">
+            <text class="drawer-price">停产</text>
+          </view>
+          <view class='drawer-info-price' wx:if="{{pure.product_status == 3}}">
+            <text class="drawer-price">即将上市</text>
+          </view>
 
         </view>
       </view>
       <view class='drawer-endurance'>
-        <text>{{pure.cron_xhlc}}</text>
+        <text wx:if="{{pure.cron_xhlc != 0}}">{{pure.cron_xhlc}}</text>
+        <text wx:if="{{pure.cron_xhlc == 0}}">-</text>
         <view>公里</view>
       </view>
 
     </view>
 
 
-  <!-- </scroll-view> -->
-</view>
-  <button  animation="{{animationData}}" class="sharebtn" open-type="share"><text>分享给好友</text><image  class="sharebtnicon" 
-
-mode="widthFix" src='http://i1.dd-img.com/assets/image/1510898451-a672fd0868b82de9-48w-48h.png'></image></button>
+    <!-- </scroll-view> -->
+  </view>
+  <button animation="{{animationData}}" class="sharebtn" open-type="share">
+    <text>分享给好友</text>
+    <image class="sharebtnicon" mode="widthFix" src='http://i1.dd-img.com/assets/image/1510898451-a672fd0868b82de9-48w-48h.png'></image>
+  </button>
 </scroll-view>
