--- a/wechat1.0/pages/condition/condition.wxss
+++ b/wechat1.0/pages/condition/condition.wxss
@@ -20,7 +20,7 @@ overflow:hidden;
 }
 .canvasnumber{
  position: absolute;
-left:140rpx;
+left:80px;
  top:101px;
  font-size: 34rpx;
  color:#666666;
@@ -29,6 +29,7 @@ left:140rpx;
   margin: 0 30rpx;
 }
 .hiddenClass{
+  width: 100%;
   height: 100%;
   overflow: hidden;
   position: fixed;
@@ -153,7 +154,7 @@ color: #33adff
  background-size: 100%;
 }
 canvas{
-	width:350px;
+	width:370px;
   /* overflow: hidden; */
 	box-sizing: border-box;
 	height:140px;
@@ -235,6 +236,9 @@ border-radius:200rpx;
 
 /* 标签切换--S */
 
+.main-box{
+  margin-top: 82rpx;
+}
 .swiper-tab {
   display: flex;
   justify-content: space-around;
@@ -247,6 +251,9 @@ border-radius:200rpx;
   font-size: 34rpx;
   border-bottom: solid 1rpx #e6e6e6;
   background-color: #fafafa;
+  position: fixed;
+  z-index: 9;
+  width: 100%;
 }
 
 /* .swiper-tab-item {
