--- a/wechat1.0/pages/parameter/parameter.wxss
+++ b/wechat1.0/pages/parameter/parameter.wxss
@@ -12,14 +12,14 @@
 }
 .container-list:nth-child(1){
 
-  width: 250rpx;
+  width: 290rpx;
    position: absolute;
   z-index: 2;
   top: 0;
   left: 0; 
 }
 .container-list:nth-child(2){
-  width: 250rpx;
+  width: 290rpx;
 }
 .container-list:nth-child(1) .container-list-btn{
   padding-left: 30rpx;
@@ -29,17 +29,17 @@
   padding-left: 30rpx;
 } */
 .container-list:nth-child(1) .container-list-parameter .car-item-title{
-  width:221rpx;
+  width:290rpx;
   padding-left: 30rpx;
 }
-.container-list:nth-child(1) .container-list-parameter .car-item-list{
+/* .container-list:nth-child(1) .container-list-parameter .car-item-list{
   width:221rpx;
   padding-left: 30rpx;
-}
+} */
 
 
 .container-list-btn {
-  width: 219rpx;
+  width: 260rpx;
    height: 240rpx; 
 
   border-right: 1rpx solid #ccc;
@@ -62,7 +62,7 @@
 }
 
 .container-list-parameter{
-  width: 219rpx;
+  width: 290rpx;
 }
 .car-item-title {
   height: 88rpx;
@@ -73,7 +73,7 @@
   font-size: 34rpx;
   border-right: 1rpx solid #fafafa;
      padding-left:10rpx; 
-  color: #33adff;
+  color: #33adff!important;
 }
 
 .car-item-list {
@@ -90,8 +90,15 @@
 .container-list:nth-child(1) .container-list-parameter .car-item-list .carname{
   border-right: 1rpx solid #f2f2f2;
 }
+
+.right-text{
+  text-align: right;
+  padding-right: 10rpx;
+  box-sizing: border-box;
+}
 .carname {
   display:block;
+  /* text-align: right */
   /* width: 219rpx; */
   /* padding: 0 30rpx; */
 }
@@ -192,6 +199,7 @@ padding: 10rpx 0;
 
 .showClass {
   display: block;
+  color: #000;
 }
 
 
