--- a/wechat1.0/pages/wx_city/wx_city.wxml
+++ b/wechat1.0/pages/wx_city/wx_city.wxml
@@ -7,7 +7,7 @@
 
     <view class='car'>
 
-       <view class='car-intro' bindtap="carDetail" wx:for="{{cityGroup}}" data-name='{{item.name}}' data-summary='{{item.summary}}' data-masterName='{{item.master_name}}' data-masterNumber='{{item.master_number}}' data-masterQr='{{item.master_qr}}' data-cover='{{item.cover}}'>
+       <view class='car-intro' bindtap="carDetail" wx:for="{{cityGroup}}"  data-id="{{item.id}}" data-name='{{item.name}}' data-summary='{{item.summary}}' data-masterName='{{item.master_name}}' data-masterNumber='{{item.master_number}}' data-masterQr='{{item.master_qr}}' data-cover='{{item.cover}}'>
         <image mode='widthFix' class='car-intro-img' src='{{item.cover}}'></image>
         <view class='car-intro-name'>{{item.name}}</view>
       </view>
